# ParallelTopo

./: .gitignore  README.md  pyproject.toml
results/m2_apsp_accuracy/: m2_accuracy_20260522T212737Z.csv  m2_accuracy_20260522T212737Z.json
results/m2_apsp_throughput/: m2_throughput_20260522T222514Z.csv  m2_throughput_20260522T222514Z.json  m2_throughput_20260531T191537Z.csv  m2_throughput_20260531T191537Z.json  m2_throughput_CPU_20260531T184851Z.csv  m2_throughput_CPU_20260531T184851Z.json
results/m3_throughput/: m3_throughput_20260601T045732Z.csv  m3_throughput_20260601T045732Z.json
results/m4_train_throughput/: m4_train_throughput_20260602T003536Z.csv  m4_train_throughput_20260602T003536Z.json  m4_train_throughput_20260602T031309Z.csv  m4_train_throughput_20260602T031309Z.json
results/m5_fig2_graphsize/: m5_fig2_graphsize_20260601T061510Z.csv  m5_fig2_graphsize_20260601T061510Z.json
results/m5_fig4_overhead/: m5_fig4_overhead_20260601T055619Z.csv  m5_fig4_overhead_20260601T055619Z.json  m5_fig4_overhead_20260601T060307Z.csv  m5_fig4_overhead_20260601T060307Z.json
results/profiling/: cpu_breakdown_random_10x10_h15_20260511T164106Z.json  cpu_breakdown_random_10x10_h15_20260511T203358Z.json  gpu_breakdown_step_10x10_b256_h15_20260601T065831Z.json  gpu_breakdown_step_10x10_b256_h15_20260601T070308Z.json  gpu_breakdown_step_15x15_b256_h15_20260601T065900Z.json
scripts/: apsp_baseline_comparison.py  batched_apsp_accuracy.py  m2_apsp_throughput.py  m3_throughput.py  m4_cpu_baseline_sb3.py  m4_train_throughput.py  m5_fig2_graphsize.py  m5_fig4_overhead.py  modal_m2_throughput.py  modal_m3_throughput.py  modal_m4_train_throughput.py  modal_m5_fig2_graphsize.py  modal_m5_fig3_gpu_breakdown.py  modal_m5_fig4_overhead.py  plot_m4_train_throughput.py
src/topograph/: __init__.py
src/topograph/bench/: __init__.py  __main__.py  gpu_profiling.py  profiling.py  runner.py
src/topograph/policies/: __init__.py  greedy.py  random.py  scripted.py
src/topograph/sim_cpu/: __init__.py  api.py  dynamics.py  types.py
src/topograph/sim_gpu/: __init__.py  apsp.py  dynamics.py  mlp_policy.py  policy.py  step.py
tests/: test_api_contract.py  test_apsp_jax.py  test_bench.py  test_dynamics.py  test_dynamics_jax.py  test_mlp_policy_jax.py  test_policies.py  test_policy_jax.py  test_profiling.py  test_sanity.py  test_step_jax.py
transit_learning/: README.md  apsp_matrix_squaring.py  compare.py  data_loader.py  modal_throughput.py  plot_results.py
transit_learning/results/transit_learning_gpu/: gpu_throughput_20260601T081907Z.txt  gpu_throughput_20260601T082307Z.txt
