[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topograph"
version = "0.0.1"
description = "Batched GPU simulation for graph-structured RL with variable topology (CS348K)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Danny Mo" }]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "networkx>=3.2",  # only for cross-checking exact APSP in tests
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]
# JAX core + a sensible CUDA wheel. The CUDA pin is intentionally loose:
# CS348K cluster machines may run a different CUDA than your laptop, and
# the right wheel depends on the runtime. If `jax[cuda12]` doesn't match
# your driver, install plain `jax` here and a matching wheel separately
# (see https://docs.jax.dev/en/latest/installation.html).
gpu = [
    "jax>=0.4.30",
    "jaxlib>=0.4.30",
]
# Optional: matplotlib for the profiling breakdown bar chart. CSV and JSON
# are always written; the PNG is a nice-to-have for the checkpoint writeup.
figures = [
    "matplotlib>=3.8",
]

[project.scripts]
topograph-bench = "topograph.bench.__main__:main"
topograph-profile = "topograph.bench.profiling:main"

[tool.hatch.build.targets.wheel]
packages = ["src/topograph"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
filterwarnings = ["error"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "NPY"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"
